[package]
name = "playground-tokio-timeout"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-tokio-timeout"
documentation = "https://docs.rs/playground-tokio-timeout"
description = "Testing whether Tokio doesn't display timeouts correctly on Windows"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }

[dev-dependencies]
